Update PxeScene object management

--- a/PXEngine/PXEngine.vcxproj
+++ b/PXEngine/PXEngine.vcxproj
@@ -231,6 +231,8 @@ xcopy /i /e /s /y /f "$(SolutionDir)PhysX\physx\bin\win.x86_64.vc142.mt\release\
     <ClInclude Include="include\PxeAction.h" />
     <ClInclude Include="include\PxeCamera.h" />
     <ClInclude Include="include\PxeDefaultCamera.h" />
+    <ClInclude Include="include\PxeGeometryObjectInterface.h" />
+    <ClInclude Include="include\PxeGUIObjectInterface.h" />
     <ClInclude Include="include\PxeInputManager.h" />
     <ClInclude Include="include\PxeActionSource.h" />
     <ClInclude Include="include\PxeApplicationInterface.h" />
@@ -241,15 +243,16 @@ xcopy /i /e /s /y /f "$(SolutionDir)PhysX\physx\bin\win.x86_64.vc142.mt\release\
     <ClInclude Include="include\PxeGLAsset.h" />
     <ClInclude Include="include\Logger.h" />
     <ClInclude Include="include\PxeIndexBuffer.h" />
+    <ClInclude Include="include\PxePhysicsObjectInterface.h" />
+    <ClInclude Include="include\PxePhysicsUpdateObjectInterface.h" />
     <ClInclude Include="include\PxeStaticPhysicsRenderObject.h" />
-    <ClInclude Include="include\PxeRenderBase.h" />
-    <ClInclude Include="include\PxeRenderElement.h" />
+    <ClInclude Include="include\PxeObject.h" />
+    <ClInclude Include="include\PxeGUIObject.h" />
     <ClInclude Include="include\PxeRenderMaterial.h" />
     <ClInclude Include="include\PxeRenderObject.h" />
     <ClInclude Include="include\PxeRenderTexture.h" />
     <ClInclude Include="include\PxeDynamicPhysicsRenderObject.h" />
     <ClInclude Include="include\PxeTexture.h" />
-    <ClInclude Include="include\PxeRingBuffer.h" />
     <ClInclude Include="include\PxeTypes.h" />
     <ClInclude Include="include\PxeVertexArray.h" />
     <ClInclude Include="include\PxeVertexBuffer.h" />
