Update terrain mesh to use new vertex array

--- a/StructLayoutSettings.json
+++ b/StructLayoutSettings.json
@@ -6,7 +6,7 @@
   "AdditionalIncludeDirs": "",
   "AdditionalForceIncludes": "",
   "AdditionalCommandLine": "",
-  "EnableWarnings": false,
+  "EnableWarnings": true,
   "PDBLocation": "",
   "ParserOutputFolder": ""
 }
