--- a/PixelExplorer/PixelExplorer.vcxproj
+++ b/PixelExplorer/PixelExplorer.vcxproj
@@ -203,6 +203,8 @@
     <ClCompile Include="src\terrain\TerrainChunk.cpp" />
     <ClCompile Include="src\terrain\TerrainManager.cpp" />
     <ClCompile Include="src\terrain\TerrainRenderMesh.cpp" />
+    <ClCompile Include="src\tools\RenderLine.cpp" />
+    <ClCompile Include="src\tools\RenderPoint.cpp" />
     <ClCompile Include="src\UpdatableScene.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -222,6 +224,8 @@
     <ClInclude Include="src\terrain\TerrainGenerator.h" />
     <ClInclude Include="src\terrain\TerrainManager.h" />
     <ClInclude Include="src\terrain\TerrainRenderMesh.h" />
+    <ClInclude Include="src\tools\RenderLine.h" />
+    <ClInclude Include="src\tools\RenderPoint.h" />
     <ClInclude Include="src\UpdatableScene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
